@@ -33,11 +33,11 @@ import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.core.io.ByteArrayResource;
@@ -88,8 +88,8 @@ public abstract class BaseModbusServerCsvConfigurer extends BasicIdentifiable
 	private final String serverSettingUid;
 	private final String serverTypeKey;
 
-	private Throwable lastImportException = null;
-	private List<String> lastImportMessages = null;
+	private @Nullable Throwable lastImportException = null;
+	private @Nullable List<String> lastImportMessages = null;
 
 	/**
 	 * Constructor.
@@ -104,7 +104,7 @@ public abstract class BaseModbusServerCsvConfigurer extends BasicIdentifiable
 	 *        a server implementation identifier to include in CSV export file
 	 *        names, e.g. {@code tcp} or {@code rtu}
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public BaseModbusServerCsvConfigurer(SettingsService settingsService,
 			OptionalService<IdentityService> identityService, String serverSettingUid,
@@ -135,14 +135,14 @@ public abstract class BaseModbusServerCsvConfigurer extends BasicIdentifiable
 
 	@Override
 	public final Collection<String> supportedCurrentResourceSettingKeys() {
-		return Collections.singletonList(RESOURCE_KEY_CSV_FILE);
+		return List.of(RESOURCE_KEY_CSV_FILE);
 	}
 
 	@Override
 	public final Iterable<Resource> currentSettingResources(String settingKey) {
 		if ( !RESOURCE_KEY_CSV_FILE.equals(settingKey) ) {
 			log.warn("Ignoring setting resource key [{}]", settingKey);
-			return null;
+			return List.of();
 		}
 		final ByteArrayOutputStream byos = new ByteArrayOutputStream(4096);
 		try (CsvWriter writer = CsvWriter.builder().commentCharacter('!').build(byos)) {
@@ -158,10 +158,10 @@ public abstract class BaseModbusServerCsvConfigurer extends BasicIdentifiable
 			}
 		} catch ( UncheckedIOException | IOException e ) {
 			log.error("Error generating Modbus Server configuration CSV: {}", e.toString());
-			return Collections.emptyList();
+			return List.of();
 		}
 		return (byos.size() > 0
-				? Collections.singleton(new ByteArrayResource(byos.toByteArray(), "Modbus Server CSV") {
+				? List.of(new ByteArrayResource(byos.toByteArray(), "Modbus Server CSV") {
 
 					@Override
 					public String getFilename() {
@@ -174,11 +174,11 @@ public abstract class BaseModbusServerCsvConfigurer extends BasicIdentifiable
 					}
 
 				})
-				: Collections.emptyList());
+				: List.of());
 	}
 
 	@Override
-	public final synchronized SettingsUpdates applySettingResources(String settingKey,
+	public final synchronized @Nullable SettingsUpdates applySettingResources(String settingKey,
 			Iterable<Resource> resources) throws IOException {
 		if ( resources == null ) {
 			return null;
@@ -216,7 +216,7 @@ public abstract class BaseModbusServerCsvConfigurer extends BasicIdentifiable
 	private List<ModbusServerConfig> parseModbusConfigs(Resource resource) throws IOException {
 		List<ModbusServerConfig> configs = new ArrayList<>(8);
 		lastImportMessages = new ArrayList<>(8);
-		ModbusServerConfigCsvParser parser = new ModbusServerConfigCsvParser(configs, getMessageSource(),
+		ModbusServerConfigCsvParser parser = new ModbusServerConfigCsvParser(configs, messageSource(),
 				lastImportMessages);
 		try (Reader in = new InputStreamReader(
 				inputStreamForPossibleGzipStream(resource.getInputStream()), StandardCharsets.UTF_8);
@@ -230,7 +230,7 @@ public abstract class BaseModbusServerCsvConfigurer extends BasicIdentifiable
 		return configs;
 	}
 
-	private SettingsUpdates toSettingsUpdates(List<ModbusServerConfig> configs) {
+	private @Nullable SettingsUpdates toSettingsUpdates(@Nullable List<ModbusServerConfig> configs) {
 		if ( configs == null || configs.isEmpty() ) {
 			return null;
 		}
